<layout>
    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/presistant_sheet_bg">

        <TextView
                android:id="@+id/tvLogoutHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/visbycf_bold"
                android:text="@string/log_out_title"/>

        <TextView
                android:id="@+id/tvLogoutSubHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/grey"
                android:layout_marginTop="8dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:fontFamily="@font/visbycf_medium"
                android:layout_below="@+id/tvLogoutHeading"
                android:text="@string/logout_sub_heading"/>

        <View
                android:id="@+id/hr1"
                android:layout_below="@+id/tvLogoutSubHeading"
                android:background="@color/grey"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="1px"/>

        <Button
                android:text="@string/log_out"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:id="@+id/bLogoutAccept"
                android:layout_below="@+id/hr1"
                android:minHeight="0dp"
                android:paddingTop="12dp"
                android:textAllCaps="false"
                android:fontFamily="@font/visbycf_bold"
                android:paddingBottom="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"/>

        <Button
                android:text="@string/cancel"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:id="@+id/bLogoutCancel"
                android:layout_below="@+id/bLogoutAccept"
                style="@style/buttonWhite"
                android:textColor="@color/grey"
                android:textAllCaps="false"
                android:fontFamily="@font/visbycf_bold"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"/>


    </RelativeLayout>

</layout>
