<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="callback"
            type="com.incubasys.formblok.common.callback.PermissionDialogCallback" />

        <variable
            name="vm"
            type="com.incubasys.formblok.common.viewmodel.PermissionViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/rlContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/presistant_sheet_bg"
        android:padding="16dp">

        <Button
            android:id="@+id/bNegativeButton"
            style="@style/buttonWhiteWithYellowOutline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bPositiveButton"
            android:layout_centerHorizontal="true"
            android:onClick="@{()->callback.onNegativeButtonClicked()}"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/bPositiveButton"
            style="@style/buttonYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMessage"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:onClick="@{()->callback.onPositiveButtonClicked()}"
            android:text="@{vm.positiveButtonText}"
            tools:text="@string/turn_on_location" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/visbycf_light"
            android:padding="16dp"
            android:text="@{vm.message}"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:text="@string/_please_turn_on_your_location_from_settings" />

    </RelativeLayout>
</layout>