<layout>

    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/presistant_sheet_bg"
            tools:context="com.incubasys.formblok.terms.ui.PrivacyPolicyFragment">

        <TextView
                android:id="@+id/tvPrivacyHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/visbycf_bold"
                android:text="@string/privacy_amp_terms"/>

        <TextView
                android:id="@+id/tvPrivacySubHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/grey"
                android:layout_marginTop="8dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:fontFamily="@font/visbycf_medium"
                android:layout_below="@+id/tvPrivacyHeading"
                tools:text="@string/privacy_sub_heading"/>

        <View
                android:id="@+id/hr1"
                android:layout_below="@+id/tvPrivacySubHeading"
                android:background="@color/grey"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="1px"/>

        <TextView
                android:id="@+id/tvPrivacyLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAlignment="center"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/visbycf_bold"
                android:layout_below="@+id/hr1"
                android:text="@string/privacy_policy"/>

        <View
                android:id="@+id/hr2"
                android:layout_below="@+id/tvPrivacyLabel"
                android:background="@color/grey"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="1px"/>

        <TextView
                android:id="@+id/tvPrivacyTermslabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAlignment="center"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/visbycf_bold"
                android:layout_below="@+id/hr2"
                android:text="@string/terms_amp_conditions"/>

        <View
                android:id="@+id/hr3"
                android:layout_below="@+id/tvPrivacyTermslabel"
                android:background="@color/grey"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="1px"/>

        <Button
                android:text="@string/accept"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:id="@+id/bPrivacyAccept"
                android:layout_below="@+id/hr3"
                android:minHeight="0dp"
                android:paddingTop="12dp"
                android:textAllCaps="false"
                android:fontFamily="@font/visbycf_bold"
                android:paddingBottom="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"/>


    </RelativeLayout>

</layout>
