<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        tools:background="?attr/colorOnPrimary"
        android:layout_height="match_parent">

    <include layout="@layout/toolbar"
             android:id="@+id/toolbar"
             android:layout_width="0dp"
             android:layout_height="?android:attr/actionBarSize"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               android:src="@drawable/ic_home_outline"
               android:id="@+id/ivNoAddressImage"
               app:layout_constraintHorizontal_bias="0.497"
               app:layout_constraintBottom_toTopOf="@+id/tvNoAddressHeading"
               app:layout_constraintVertical_chainStyle="packed"
               android:contentDescription="@string/image" android:layout_marginTop="8dp"
               app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <TextView android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:textSize="30sp"
              android:textColor="@android:color/black"
              tools:text="@string/no_properties_yet"
              android:text="@string/no_properties_yet"
              android:fontFamily="@font/visbycf_bold"
              android:id="@+id/tvNoAddressHeading"
              android:gravity="center"
              app:layout_constraintTop_toBottomOf="@+id/ivNoAddressImage"
              app:layout_constraintBottom_toTopOf="@+id/tvNoAddressSubHeading"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginTop="24dp"/>

    <TextView android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:textSize="20sp"
              android:textColor="@color/grey2"
              android:gravity="center"
              android:text="@string/to_get_started_search_for_an_address_and_add_a_property_to_the_project"
              tools:text="To get started search for an address and add a property to the project."
              android:fontFamily="@font/visbycf_medium"
              android:id="@+id/tvNoAddressSubHeading"
              app:layout_constraintTop_toBottomOf="@+id/tvNoAddressHeading"
              app:layout_constraintBottom_toTopOf="@+id/bSearchAddress"
              android:layout_marginTop="16dp"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginStart="32dp"
              android:layout_marginEnd="32dp"/>
    <Button
            android:text="@string/search_address"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:id="@+id/bSearchAddress"
            android:minHeight="0dp"
            android:paddingTop="12dp"
            android:textAllCaps="false"
            android:fontFamily="@font/visbycf_bold"
            android:paddingBottom="12dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            style="@style/buttonYellow"/>


</androidx.constraintlayout.widget.ConstraintLayout>