<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable name="vm"
                  type="com.incubasys.formblok.auth.viewmodel.AuthViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/visbycf_bold"
                  android:text="@string/password"
                  android:layout_above="@+id/etPassword"
                  android:textColor="?attr/colorPrimary"
                  android:textSize="15sp"
                  android:id="@+id/tvPasswordLabel"
                  android:textAllCaps="true"
                  android:letterSpacing="0.09"
                  android:visibility="@{safeUnbox(vm.visiblePasswordText ? View.VISIBLE : View.INVISIBLE),default = invisible}"
                  app:layout_constraintBottom_toTopOf="@+id/etPassword"
                  android:layout_marginStart="20dp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.0"/>

        <EditText
                android:id="@+id/etPassword"
                style="@style/SimpleEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:hint="@string/please_enter_your_password_hint"
                android:paddingBottom="4dp"
                android:inputType="textPassword"
                android:text="@={vm.loginInput.password}"
                app:validate="@{vm.passwordError}"
                android:onTextChanged="@{()->vm.checkPasswordValidation()}"
                android:layout_centerInParent="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                app:layout_constraintVertical_bias="0.3"
                tools:ignore="Autofill,TextFields"
                android:layout_marginStart="20dp"/>

        <ImageView
                android:id="@+id/ivPasswordNext"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/fab_background"
                android:layout_marginEnd="16dp"
                android:enabled="@{vm.enablePasswordNextButton}"
                android:layout_marginBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/image"/>
        <TextView
                android:text="@string/forgot_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp"
                android:padding="8dp"
                android:letterSpacing="0.09"
                android:fontFamily="@font/visbycf_bold"
                android:id="@+id/tvForgotPasswordLabel"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="@+id/ivPasswordNext"
                app:layout_constraintBottom_toBottomOf="@+id/ivPasswordNext"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>